Performance Investigator Carbide extension 2.4.0